removed background image. change color scheme. changed navbar hover/active behavior. new twitter feed.

--- a/coursework/index.html
+++ b/coursework/index.html
@@ -13,32 +13,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
         <!-- Latest compiled and minified JavaScript -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-submenu.min.css">
-
-
-        <style>
-            abbr[title] {
-                border-bottom: none !important;
-                cursor: inherit !important;
-                text-decoration: none !important;
-            }
-            .navbar-brand,
-            .navbar-nav li a {
-                line-height: 50px;
-                height: 55px;
-                padding-top: 5px;
-                padding-left: 5px;
-            }
-            .navbar {
-                background: rgba(245, 245, 245, 0.1);
-            }
-            body {
-              background: url(../images/Roan.jpg) no-repeat center center fixed;
-              -webkit-background-size: cover;
-              -moz-background-size: cover;
-              -o-background-size: cover;
-              background-size: cover;
-            }
-        </style>
+        <link rel="stylesheet" href="../css/custom.css">
     </head>
 
 
@@ -67,8 +42,8 @@
               <ul class="nav navbar-nav">
                 <li><a href="../">Home<span class="sr-only">(current)</span></a></li>
                 <li><a href="../cal/">Schedule<span class="sr-only">(current)</span></a></li>
-                <li><a href="../cv/">CV<span class="sr-only">(current)</span></a></li>
-                <li><a href="#">Projects<span class="sr-only">(current)</span></a></li>
+                <li><a href="../docs/kingCV.pdf" target="_blank">CV<span class="sr-only">(current)</span></a></li>
+                <li class="active"><a href="#">Projects<span class="sr-only">(current)</span></a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
@@ -84,7 +59,7 @@
                         <h1 class="page-header">Projects</h1>
 
                         <div style="text-align: center">
-                            <blockquote class="imgur-embed-pub" lang="en" data-id="a/ziBfg"><a href="//imgur.com/ziBfg">Graduation Cap of a Computer Science and Electrical Engineering Major</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+                            <blockquote class="imgur-embed-pub" lang="en" data-id="a/ziBfg"><a href="https://imgur.com/ziBfg">Graduation Cap of a Computer Science and Electrical Engineering Major</a></blockquote><script async src="https://s.imgur.com/min/embed.js" charset="utf-8"></script>
                         </div>
 
                         <div class="panel panel-default">
@@ -142,21 +117,22 @@
                     <div class="col-sm-2"></div>
                 </div><!-- end row-fluid -->
 
-                <div class="row" style="text-align: left">
+                <!-- <div class="row" style="text-align: left">
                    <div class="col-sm-2"></div>
                    <div class="col-sm-8"><hr></div>
                    <div class="col-sm-2"></div>
-                </div>
+                </div> -->
             </div><!-- /.container-fluid -->
         </div> <!-- end jumbotron -->
 
-	<div style="position: relative; bottom: 0; width:100%; text-align: center; color:white">
+        <div style="position: relative; bottom: 0; width:100%; text-align: center;">
+            <br>
             <p>
-                <a href="http://validator.w3.org/check/referer"
+                <a href="https://validator.w3.org/check/referer"
                 title="Validate HTML5"><img src="../images/valid-html51.png"
                 alt="Valid XHTML 1.0" height="20" width="70"/></a>&nbsp;&nbsp;
 
-                <a href="http://getbootstrap.com/" title="Bootstrap">
+                <a href="https://getbootstrap.com/" title="Bootstrap">
                 <img src="../images/bootstrap.png"
                 alt="Bootstrap" height="20"/></a>&nbsp;&nbsp;
             </p>
