--- a/index.html
+++ b/index.html
@@ -13,41 +13,8 @@
         <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css"> -->
         <!-- Latest compiled and minified JavaScript -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-submenu.min.css">
-
         <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css" rel="stylesheet">
-
-
-
-        <style>
-            abbr[title] {
-                border-bottom: none !important;
-                cursor: inherit !important;
-                text-decoration: none !important;
-            }
-            .navbar-brand,
-            .navbar-nav li a {
-                line-height: 50px;
-                height: 55px;
-                padding-top: 5px;
-                padding-left: 5px;
-            }
-            .navbar {
-                background: rgba(245, 245, 245, 0.2);
-                border: 0 !important;
-            }
-            .well, .well-sm {
-                background: rgba(245, 245, 245, 0.2);
-                border: 0 !important;
-            }
-
-            body {
-              background: url(images/Roan.jpg) no-repeat center center fixed;
-              -webkit-background-size: cover;
-              -moz-background-size: cover;
-              -o-background-size: cover;
-              background-size: cover;
-            }
-        </style>
+        <link rel="stylesheet" href="css/custom.css">
     </head>
 
     <body>
@@ -74,7 +41,7 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav">
-                <li><a href="#">Home<span class="sr-only">(current)</span></a></li>
+                <li class="active"><a href="#">Home<span class="sr-only">(current)</span></a></li>
                 <li><a href="cal/">Schedule<span class="sr-only">(current)</span></a></li>
                 <li><a href="docs/kingCV.pdf" target="_blank">CV<span class="sr-only">(current)</span></a></li>
                 <li><a href="coursework/">Projects<span class="sr-only">(current)</span></a></li>
@@ -90,91 +57,87 @@
               <div class="row" style="margin-right: 0px">
                 <div class="col-sm-2"></div>
                 <div class="col-sm-8">
-                  <div class="alert alert-info alert-dismissible" role="alert" style="background: rgba(245, 245, 245, 0.5);border: 0 !important;">
+                  <div class="alert alert-info alert-dismissible" role="alert" style="border: 0 !important;">
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <strong>Hey!</strong> Check out my ongoing <a href="../PyCube/" class="alert-link">PyCube</a> project :)
+                    <strong>Hey!</strong> Check out my ongoing <a href="../PyCube/">PyCube</a> project :)
                   </div>
                 </div>
                 <div class="col-sm-2"></div>
               </div>
           </div>
           <div class="container" style="text-align: left">
-              <div class="row">
-                  <div class="col-sm-2"></div>
-                  <div class="col-sm-3">
-                      <img src="images/bowtie2.jpg" class="img-rounded"
-                      style="height:300px; margin-left:0px" alt="MK Photo">
+            <div class="row">
+              <div class="col-sm-2"></div>
+              <div class="col-sm-3">
+                  <img src="images/bowtie2.jpg" class="img-rounded"
+                  style="height:300px; margin-left:0px" alt="MK Photo">
+              </div>
+              <br>
+              <div class="col-sm-2"></div>
+
+              <div class="col-sm-3">
+                  <div class="well well-sm">
+                  <ul class="list-unstyled">
+                      <li><abbr title="Address"><i class="glyphicon
+                      glyphicon-map-marker"></i></abbr> 258 Belk Bldg.
+                      <br></li>
+
+                      <li><abbr title="Phone"><i
+                      class="glyphicon glyphicon-earphone"></i></abbr>
+                      828-406-1743</li>
+
+                      <li><abbr title="LinkedIn"><i style="content: url('images/ln.png');
+                      width: 15px; height: 15px;"></i></abbr>  <a
+                      href="https://www.linkedin.com/in/mtking2" target="_blank">LinkedIn</a>
+                      </li>
+
+                      <li><abbr title="GitHub"><i class="fa fa-github fa-lg" aria-hidden="true">
+                          </i></abbr> <a href="https://github.com/mtking2" target="_blank">GitHub</a>
+                      </li>
+
+                      <li><abbr title="GitHub"><i class="fa fa-steam-square fa-lg" aria-hidden="true">
+                      </i></abbr> <a href="http://steamcommunity.com/id/mtking2/" target="_blank"> Steam</a>
+                      </li>
+
+                      <li><abbr title="Email"><i class="glyphicon
+                      glyphicon-envelope"></i></abbr>  <a
+                      href="mailto:mtking1123@gmail.com"> mtking1123@gmail.com</a>
+                      </li>
+
+                      <li><a href="http://tr-8r.com" target="_blank"><abbr title="Show your loyalty" ><i style="content: url('images/nst.png');
+                      width: 20px; padding-top: 10px;"></i></abbr></a>
+                      </li>
+                  </ul>
                   </div>
-                  <br>
-                  <div class="col-sm-2"></div>
-
-                  <div class="col-sm-3">
-                      <div class="well well-sm">
-                      <ul class="list-unstyled">
-                          <li><abbr title="Address"><i class="glyphicon
-                          glyphicon-map-marker"></i></abbr> 258 Belk Bldg.
-                          <br></li>
-
-                          <li><abbr title="Phone"><i
-                          class="glyphicon glyphicon-earphone"></i></abbr>
-                          828-406-1743</li>
-
-                          <li><abbr title="LinkedIn"><i style="content: url('images/ln.png');
-                          width: 15px; height: 15px;"></i></abbr>  <a
-                          href="https://www.linkedin.com/in/mtking2" target="_blank">LinkedIn</a>
-                          </li>
-
-                          <li><abbr title="GitHub"><i class="fa fa-github fa-lg" aria-hidden="true">
-                              </i></abbr> <a href="https://github.com/mtking2" target="_blank">GitHub</a>
-                          </li>
-
-                          <li><abbr title="GitHub"><i class="fa fa-steam-square fa-lg" aria-hidden="true">
-                          </i></abbr> <a href="http://steamcommunity.com/id/mtking2/" target="_blank"> Steam</a>
-                          </li>
-
-                          <li><abbr title="Email"><i class="glyphicon
-                          glyphicon-envelope"></i></abbr>  <a
-                          href="mailto:mtking1123@gmail.com"> mtking1123@gmail.com</a>
-                          </li>
-
-                          <li><a href="http://tr-8r.com" target="_blank"><abbr title="Show your loyalty" ><i style="content: url('images/nst.png');
-                          width: 20px; padding-top: 10px;"></i></abbr></a>
-                          </li>
-                      </ul>
-                      </div>
-                  </div>
-               </div><!-- end row-fluid -->
-
-               <div class="row" style="text-align: left">
-                  <div class="col-sm-2"></div>
-                  <div class="col-sm-8">
-                      <h1 class="page-header">Michael King</h1>
+              </div>
+            </div><!-- end row-fluid -->
+            <br>
+            <div class="row" style="text-align: left">
+                <div class="col-sm-2"></div>
+                <div class="col-sm-8 well well-sm">
+                      <h1>Michael King</h1><hr>
                       <h3>Western Carolina University Gratuate</h3>
                       <h4><a href="http://www.wcu.edu/learn/departments-schools-colleges/Kimmel/academic-programs-degrees-offered/engtech/index.asp" target="_blank">
                       B.S. in Electrical & Computer Engineering Technology</a></h4>
                       <h4><a href="http://agora.cs.wcu.edu" target="_blank">B.S. in Computer Science</a></h4>
                       <h4><a href="http://agora.cs.wcu.edu" target="_blank">Minor in Mathematics</a></h4>
-                      <hr>
-                  </div>
-                  <div class="col-sm-2"></div>
-               </div><!-- end row-fluid -->
+                </div>
+                <div class="col-sm-2"></div>
+            </div><!-- end row-fluid -->
 
-               <div class="row">
-                  <div class="col-sm-2"></div>
-                  <div class="col-sm-8 well-sm">
-                      <!-- <h4 class="page-header"></h4> -->
-                      <a class="twitter-timeline" width="100%"  href="https://twitter.com/thaadjarvis" data-widget-id="641288357016936448" data-chrome=" nofooter transparent">Tweets by @thaadjarvis</a>
-                      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';
-                      if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";
-                      fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-                  </div>
-                  <div class="col-sm-2"></div>
-              </div><!-- end row-fluid -->
-              <div class="row" style="text-align: left">
-                 <div class="col-sm-2"></div>
-                 <div class="col-sm-8"><hr></div>
-                 <div class="col-sm-2"></div>
+            <div class="row">
+              <div class="col-sm-2"></div>
+              <div class="col-sm-8 well well-sm">
+                  <a class="twitter-timeline" data-height="800" data-chrome=" nofooter transparent" href="https://twitter.com/thaadjarvis">Tweets by thaadjarvis</a>
+                  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
               </div>
+              <div class="col-sm-2"></div>
+            </div><!-- end row-fluid -->
+            <div class="row" style="text-align: left">
+             <div class="col-sm-2"></div>
+             <div class="col-sm-8"><hr></div>
+             <div class="col-sm-2"></div>
+            </div>
 
           </div><!-- /.container-fluid -->
       </div> <!-- end jumbotron -->
@@ -183,13 +146,13 @@
 
 
 
-        <div style="position: relative; bottom: 0; width:100%; text-align: center; color:white;">
+        <div style="position: relative; bottom: 0; width:100%; text-align: center;">
             <p>
-                <a href="http://validator.w3.org/check/referer"
+                <a href="https://validator.w3.org/nu/check/referer"
                 title="Validate HTML5"><img src="images/valid-html51.png"
                 alt="Valid XHTML 1.0" height="20" width="70"/></a>&nbsp;&nbsp;
 
-                <a href="http://getbootstrap.com/" title="Bootstrap">
+                <a href="https://getbootstrap.com/" title="Bootstrap">
                 <img src="images/bootstrap.png"
                 alt="Bootstrap" height="20"/></a>&nbsp;&nbsp;
             </p>
