--- a/cal/index.html
+++ b/cal/index.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
         <!-- Latest compiled and minified JavaScript -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-submenu.min.css">
+        <link rel="stylesheet" href="../css/custom.css">
         <style>
             .frame {
                 text-align: center;
@@ -22,28 +23,6 @@
                 left: center;
                 right: center;
 
-            }
-            abbr[title] {
-                border-bottom: none !important;
-                cursor: inherit !important;
-                text-decoration: none !important;
-            }
-            .navbar-brand,
-            .navbar-nav li a {
-                line-height: 50px;
-                height: 55px;
-                padding-top: 5px;
-                padding-left: 5px;
-            }
-            .navbar {
-                background: rgba(245, 245, 245, 0.1);
-            }
-            body {
-              background: url(../images/Roan.jpg) no-repeat center center fixed;
-              -webkit-background-size: cover;
-              -moz-background-size: cover;
-              -o-background-size: cover;
-              background-size: cover;
             }
         </style>
     </head>
@@ -73,8 +52,8 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav">
                 <li><a href="../">Home<span class="sr-only">(current)</span></a></li>
-                <li><a href="#">Schedule<span class="sr-only">(current)</span></a></li>
-                <li><a href="../cv/">CV<span class="sr-only">(current)</span></a></li>
+                <li class="active"><a href="#">Schedule<span class="sr-only">(current)</span></a></li>
+                <li><a href="../docs/kingCV.pdf" target="_blank">CV<span class="sr-only">(current)</span></a></li>
                 <li><a href="../coursework/">Projects<span class="sr-only">(current)</span></a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
@@ -88,14 +67,14 @@
         </div>
 
 
-        <div style="position: relative; bottom: 0; width:100%; text-align: center; color:white; background: rgba(245, 245, 245, 0.2);">
-            <hr>
+        <div style="position: relative; bottom: 0; width:100%; text-align: center;">
+            <br>
             <p>
-                <a href="http://validator.w3.org/check/referer"
+                <a href="https://validator.w3.org/check/referer"
                 title="Validate HTML5"><img src="../images/valid-html51.png"
                 alt="Valid XHTML 1.0" height="20" width="70"/></a>&nbsp;&nbsp;
 
-                <a href="http://getbootstrap.com/" title="Bootstrap">
+                <a href="https://getbootstrap.com/" title="Bootstrap">
                 <img src="../images/bootstrap.png"
                 alt="Bootstrap" height="20"/></a>&nbsp;&nbsp;
             </p>
