fixed imgur embed width

--- a/coursework/index.html
+++ b/coursework/index.html
@@ -59,7 +59,7 @@
                         <h1 class="page-header">Projects</h1>
 
                         <div style="text-align: center">
-                            <blockquote class="imgur-embed-pub" lang="en" data-id="a/ziBfg"><a href="https://imgur.com/ziBfg">Graduation Cap of a Computer Science and Electrical Engineering Major</a></blockquote><script async src="https://s.imgur.com/min/embed.js" charset="utf-8"></script>
+                            <blockquote class="imgur-embed-pub" lang="en" data-width="100%" data-id="a/ziBfg"><a href="https://imgur.com/ziBfg">Graduation Cap of a Computer Science and Electrical Engineering Major</a></blockquote><script async src="https://s.imgur.com/min/embed.js" charset="utf-8"></script>
                         </div>
 
                         <div class="panel panel-default">
