--- a/coursework/index.html
+++ b/coursework/index.html
@@ -59,7 +59,8 @@
                         <h1 class="page-header">Projects</h1>
 
                         <div style="text-align: center">
-                            <blockquote class="imgur-embed-pub" lang="en" data-width="100%" data-id="a/ziBfg"><a href="https://imgur.com/ziBfg">Graduation Cap of a Computer Science and Electrical Engineering Major</a></blockquote><script async src="https://s.imgur.com/min/embed.js" charset="utf-8"></script>
+                            <!-- <blockquote class="imgur-embed-pub" lang="en" width="100%" data-id="a/ziBfg"><a href="https://imgur.com/ziBfg">Graduation Cap of a Computer Science and Electrical Engineering Major</a></blockquote><script async src="https://s.imgur.com/min/embed.js" charset="utf-8"></script> -->
+                            <iframe allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" class="imgur-embed-iframe-pub imgur-embed-iframe-pub-a-ziBfg-true-540" scrolling="no" src="http://imgur.com/a/ziBfg/embed?pub=true&amp;w=600" id="imgur-embed-iframe-pub-a-ziBfg" style="height: 555px; width: 100%; border: none; margin: 10px 0px; padding: 0px;"></iframe>
                         </div>
 
                         <div class="panel panel-default">
