alert width fix

--- a/index.html
+++ b/index.html
@@ -53,11 +53,13 @@
 
 
         <div class="jumbotron-main" style="text-align: left">
-          <div class="container">
+
+          <div class="container" style="text-align: left">
               <div class="row" style="margin-right: 0px">
                 <div class="col-sm-2"></div>
                 <div class="col-sm-8">
-                  <div class="alert alert-info alert-dismissible" role="alert" style="border: 0 !important;">
+                  <!-- Alerts -->
+                  <div class="alert alert-info alert-dismissible" role="alert" style="width: 104%; border: 0 !important;">
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                     <strong>Hey!</strong> Check out my ongoing <a href="../PyCube/">PyCube</a> project :)
                   </div>
@@ -65,6 +67,8 @@
                 <div class="col-sm-2"></div>
               </div>
           </div>
+
+
           <div class="container" style="text-align: left">
             <div class="row">
               <div class="col-sm-2"></div>
@@ -112,6 +116,7 @@
               </div>
             </div><!-- end row-fluid -->
             <br>
+
             <div class="row" style="text-align: left">
                 <div class="col-sm-2"></div>
                 <div class="col-sm-8 well well-sm">
@@ -126,12 +131,18 @@
             </div><!-- end row-fluid -->
 
             <div class="row">
-              <div class="col-sm-2"></div>
-              <div class="col-sm-8 well well-sm">
-                  <a class="twitter-timeline" data-height="800" data-chrome=" nofooter transparent" href="https://twitter.com/thaadjarvis">Tweets by thaadjarvis</a>
-                  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-              </div>
-              <div class="col-sm-2"></div>
+                <div class="col-sm-2"></div>
+                <div class="col-sm-8 well well-sm">
+                    <div class="visible-sm-block visible-md-block visible-lg-block">
+                        <a class="twitter-timeline" data-height="970" data-chrome=" nofooter transparent" href="https://twitter.com/thaadjarvis">Tweets by thaadjarvis</a>
+                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                    </div>
+                    <div class="visible-xs-block">
+                        <a class="twitter-timeline" data-height="500" data-chrome=" nofooter transparent" href="https://twitter.com/thaadjarvis">Tweets by thaadjarvis</a>
+                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                    </div>
+                </div>
+                <div class="col-sm-2"></div>
             </div><!-- end row-fluid -->
             <div class="row" style="text-align: left">
              <div class="col-sm-2"></div>
