center imgur embed

--- a/coursework/index.html
+++ b/coursework/index.html
@@ -58,7 +58,7 @@
                     <div class="col-sm-8">
                         <h1 class="page-header">Projects</h1>
 
-                        <div class="well well-sm">
+                        <div class="well well-sm" style="text-align: center;">
                             <blockquote class="imgur-embed-pub" lang="en" data-id="a/ziBfg"><a href="//imgur.com/ziBfg">Graduation Cap of a Computer Science and Electrical Engineering Major</a></blockquote>
                             <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
                         </div>
