--- a/coursework/index.html
+++ b/coursework/index.html
@@ -51,7 +51,20 @@
 
 
         <div class="jumbotron-main" style="text-align: left">
+
             <div class="container">
+
+                <div class="row" style="margin-right: 0px">
+                  <div class="col-sm-2"></div>
+                  <div class="col-sm-8">
+                    <!-- Alerts -->
+                    <div class="alert alert-info alert-dismissible" role="alert" style="width: 104%; border: 0 !important;">
+                      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                      <strong>Hey!</strong> Check out my ongoing <a href="../../PyCube/">PyCube</a> project :)
+                    </div>
+                  </div>
+                  <div class="col-sm-2"></div>
+                </div>
 
                 <div class="row" style="text-align: left">
                     <div class="col-sm-2"></div>
