updated infopane, ECET link, and new CV

--- a/index.html
+++ b/index.html
@@ -1,134 +1,137 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Michael King</title>
-        <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-        <link rel="SHORTCUT ICON" href="images/rubik.png">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- link rel='stylesheet' type='text/css' href='index.css'/-->
 
-        <!-- Latest compiled and minified CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-        <!-- Optional theme -->
-        <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css"> -->
-        <!-- Latest compiled and minified JavaScript -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-submenu.min.css">
-        <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="css/custom.css">
-    </head>
+<head>
+    <title>Michael King</title>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <link rel="SHORTCUT ICON" href="images/rubik.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- link rel='stylesheet' type='text/css' href='index.css'/-->
 
-    <body>
-        <!--
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <!-- Optional theme -->
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css"> -->
+    <!-- Latest compiled and minified JavaScript -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-submenu.min.css">
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/custom.css">
+</head>
+
+<body>
+    <!--
         <h1>Michael King</h1>
         <p>This is the default web page for this server.</p>
         <p>Under development.</p>
         -->
 
-        <nav class="navbar navbar-default">
-          <div class="container-fluid">
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="http://www.wcu.edu"><img alt="WCU" src="images/wcu.png" style="height:45px;"></a>
+                <a class="navbar-brand" href="http://www.wcu.edu"><img alt="WCU" src="images/wcu.png" style="height:45px;"></a>
 
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-              <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home<span class="sr-only">(current)</span></a></li>
-                <li><a href="cal/">Schedule<span class="sr-only">(current)</span></a></li>
-                <li><a href="docs/kingCV.pdf" target="_blank">CV<span class="sr-only">(current)</span></a></li>
-                <li><a href="coursework/">Projects<span class="sr-only">(current)</span></a></li>
-              </ul>
-            </div><!-- /.navbar-collapse -->
-          </div><!-- /.container-fluid -->
-        </nav>
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Home<span class="sr-only">(current)</span></a></li>
+                    <li><a href="cal/">Schedule<span class="sr-only">(current)</span></a></li>
+                    <li><a href="docs/kingCV.pdf" target="_blank">CV<span class="sr-only">(current)</span></a></li>
+                    <li><a href="coursework/">Projects<span class="sr-only">(current)</span></a></li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
 
 
 
-        <div class="jumbotron-main" style="text-align: left">
+    <div class="jumbotron-main" style="text-align: left">
 
-          <div class="container" style="text-align: left">
-              <div class="row" style="margin-right: 0px">
+        <div class="container" style="text-align: left">
+            <div class="row" style="margin-right: 0px">
                 <div class="col-sm-2"></div>
                 <div class="col-sm-8">
-                  <!-- Alerts -->
-                  <div class="alert alert-info alert-dismissible" role="alert" style="width: 104%; border: 0 !important;">
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <strong>Hey!</strong> Check out my ongoing <a href="../PyCube/">PyCube</a> project :)
-                  </div>
+                    <!-- Alerts -->
+                    <div class="alert alert-info alert-dismissible" role="alert" style="width: 104%; border: 0 !important;">
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <strong>Hey!</strong> Check out my ongoing <a href="../PyCube/">PyCube</a> project :)
+                    </div>
                 </div>
                 <div class="col-sm-2"></div>
-              </div>
-          </div>
+            </div>
+        </div>
 
 
-          <div class="container" style="text-align: left">
+        <div class="container" style="text-align: left">
             <div class="row">
-              <div class="col-sm-2"></div>
-              <div class="col-sm-3">
-                  <img src="images/bowtie2.jpg" class="img-rounded"
-                  style="height:300px; margin-left:0px" alt="MK Photo">
-              </div>
-              <br>
-              <div class="col-sm-2"></div>
+                <div class="col-sm-2"></div>
+                <div class="col-sm-3">
+                    <img src="images/bowtie2.jpg" class="img-rounded" style="height:300px; margin-left:0px" alt="MK Photo">
+                </div>
+                <br>
+                <div class="col-sm-1"></div>
 
-              <div class="col-sm-3">
-                  <div class="well well-sm">
-                  <ul class="list-unstyled">
-                      <li><abbr title="Address"><i class="glyphicon
-                      glyphicon-map-marker"></i></abbr> 258 Belk Bldg.
-                      <br></li>
+                <div class="col-sm-4">
+                    <div class="well well-sm">
+                        <ul class="list-unstyled">
+                            <li><abbr title="Address"><i class="glyphicon
+                      glyphicon-map-marker"></i></abbr> Asheville, NC Area
+                                <br></li>
 
-                      <li><abbr title="Phone"><i
-                      class="glyphicon glyphicon-earphone"></i></abbr>
-                      828-406-1743</li>
+                            <li><abbr title="Phone"><i
+                      class="glyphicon glyphicon-earphone"></i></abbr> 828-406-1743
+                            </li>
 
-                      <li><abbr title="LinkedIn"><i style="content: url('images/ln.png');
-                      width: 15px; height: 15px;"></i></abbr>  <a
-                      href="https://www.linkedin.com/in/mtking2" target="_blank">LinkedIn</a>
-                      </li>
+                            <li><abbr title="LinkedIn"><i style="content: url('images/ln.png');
+                      width: 15px; height: 15px;"></i></abbr> <a href="https://www.linkedin.com/in/mtking2" target="_blank">LinkedIn</a>
+                            </li>
 
-                      <li><abbr title="GitHub"><i class="fa fa-github fa-lg" aria-hidden="true">
+                            <li><abbr title="GitHub"><i class="fa fa-github fa-lg" aria-hidden="true">
                           </i></abbr> <a href="https://github.com/mtking2" target="_blank">GitHub</a>
-                      </li>
+                            </li>
 
-                      <li><abbr title="GitHub"><i class="fa fa-steam-square fa-lg" aria-hidden="true">
+                            <li><abbr title="GitHub"><i class="fa fa-steam-square fa-lg" aria-hidden="true">
                       </i></abbr> <a href="http://steamcommunity.com/id/mtking2/" target="_blank"> Steam</a>
-                      </li>
+                            </li>
 
-                      <li><abbr title="Email"><i class="glyphicon
-                      glyphicon-envelope"></i></abbr>  <a
-                      href="mailto:mtking1123@gmail.com"> mtking1123@gmail.com</a>
-                      </li>
+                            <li><abbr title="Email"><i class="glyphicon
+                      glyphicon-envelope"></i></abbr> <a href="mailto:mtking1123@gmail.com"> mtking1123@gmail.com</a>
+                            </li>
 
-                      <li><a href="http://tr-8r.com" target="_blank"><abbr title="Show your loyalty" ><i style="content: url('images/nst.png');
+                            <li><a href="http://tr-8r.com" target="_blank"><abbr title="Show your loyalty" ><i style="content: url('images/nst.png');
                       width: 20px; padding-top: 10px;"></i></abbr></a>
-                      </li>
-                  </ul>
-                  </div>
-              </div>
-            </div><!-- end row-fluid -->
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <!-- end row-fluid -->
             <br>
 
             <div class="row" style="text-align: left">
                 <div class="col-sm-2"></div>
                 <div class="col-sm-8 well well-sm">
-                      <h1>Michael King</h1><hr>
-                      <h3>Western Carolina University Gratuate</h3>
-                      <h4><a href="http://www.wcu.edu/learn/departments-schools-colleges/Kimmel/academic-programs-degrees-offered/engtech/index.asp" target="_blank">
+                    <h1>Michael King</h1>
+                    <hr>
+                    <h3>Western Carolina University Gratuate</h3>
+                    <h4><a href="https://www.wcu.edu/learn/departments-schools-colleges/cet/" target="_blank">
                       B.S. in Electrical & Computer Engineering Technology</a></h4>
-                      <h4><a href="http://agora.cs.wcu.edu" target="_blank">B.S. in Computer Science</a></h4>
-                      <h4><a href="http://agora.cs.wcu.edu" target="_blank">Minor in Mathematics</a></h4>
+                    <h4><a href="http://agora.cs.wcu.edu" target="_blank">B.S. in Computer Science</a></h4>
+                    <h4><a href="http://agora.cs.wcu.edu" target="_blank">Minor in Mathematics</a></h4>
                 </div>
                 <div class="col-sm-2"></div>
-            </div><!-- end row-fluid -->
+            </div>
+            <!-- end row-fluid -->
 
             <div class="row">
                 <div class="col-sm-2"></div>
@@ -143,49 +146,60 @@
                     </div>
                 </div>
                 <div class="col-sm-2"></div>
-            </div><!-- end row-fluid -->
+            </div>
+            <!-- end row-fluid -->
             <div class="row" style="text-align: left">
-             <div class="col-sm-2"></div>
-             <div class="col-sm-8"><hr></div>
-             <div class="col-sm-2"></div>
+                <div class="col-sm-2"></div>
+                <div class="col-sm-8">
+                    <hr>
+                </div>
+                <div class="col-sm-2"></div>
             </div>
 
-          </div><!-- /.container-fluid -->
-      </div> <!-- end jumbotron -->
-
-
-
-
-
-        <div style="position: relative; bottom: 0; width:100%; text-align: center;">
-            <p>
-                <a href="https://validator.w3.org/nu/check/referer"
-                title="Validate HTML5"><img src="images/valid-html51.png"
-                alt="Valid XHTML 1.0" height="20" width="70"/></a>&nbsp;&nbsp;
-
-                <a href="https://getbootstrap.com/" title="Bootstrap">
-                <img src="images/bootstrap.png"
-                alt="Bootstrap" height="20"/></a>&nbsp;&nbsp;
-            </p>
-            <script> document.write("Last modified on: " + document.lastModified +"");</script>
         </div>
+        <!-- /.container-fluid -->
+    </div>
+    <!-- end jumbotron -->
 
+
+
+
+
+    <div style="position: relative; bottom: 0; width:100%; text-align: center;">
+        <p>
+            <a href="https://validator.w3.org/nu/check/referer" title="Validate HTML5"><img src="images/valid-html51.png" alt="Valid XHTML 1.0" height="20" width="70" /></a>&nbsp;&nbsp;
+
+            <a href="https://getbootstrap.com/" title="Bootstrap">
+                <img src="images/bootstrap.png" alt="Bootstrap" height="20" /></a>&nbsp;&nbsp;
+        </p>
         <script>
-          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-          })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-          ga('create', 'UA-80843466-1', 'auto');
-          ga('send', 'pageview');
+            document.write("Last modified on: " + document.lastModified + "");
         </script>
+    </div>
 
-        <!-- Latest compiled and minified JavaScript -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-        <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap-submenu.min.js" defer></script>
-        <script src="https://use.fontawesome.com/3f9a2d6486.js"></script>
+    <script>
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-    </body>
+        ga('create', 'UA-80843466-1', 'auto');
+        ga('send', 'pageview');
+    </script>
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap-submenu.min.js" defer></script>
+    <script src="https://use.fontawesome.com/3f9a2d6486.js"></script>
+
+</body>
 
 </html>
